# note-article-skill

./: .gitignore  LICENSE  README.md
note-mcp/: README.md  pyproject.toml
note-mcp-patches/: README.md  changes.patch
note-mcp-patches/src/note_mcp/: server.py
note-mcp-patches/src/note_mcp/api/: articles.py  magazines.py
note-mcp-patches/src/note_mcp/auth/: browser.py
note-mcp/scripts/: recon.py
note-mcp/src/note_mcp/: __init__.py  __main__.py  articles.py  auth.py  client.py  embeds.py  images.py  magazines.py  markdown.py  server.py  session.py  whoami.py
skills/note-article/: SKILL.md
skills/note-article/templates/: article.md  thumbnail_prompts.md
