[project]
name = "note-mcp"
version = "0.1.0"
description = "Self-healing MCP server for note.com (built for note-article-skill)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-NotearticleSkill-1.0" }
authors = [{ name = "nanameru" }]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "markdown-it-py>=3.0.0",
    "keyring>=25.0.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
note-mcp = "note_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/note_mcp"]
